--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,7 @@
 @import url(./default.css);
 @import url(./loader.css);
 @import url(./scrollbar.css);
+@import url(./animations.css);
 
 /* @import url(./circles.css); */
 
@@ -30,7 +31,7 @@ main {
 
 /* --------------------------*/
 
-p {
+p, h2 {
     color: var(--light-grey);
 }
 
