--- a/css/gameCards.css
+++ b/css/gameCards.css
@@ -1,4 +1,4 @@
-
+@import url(./default.css);
 
 .game-card-styler {
     display: flex;
@@ -16,11 +16,62 @@
     gap: 20px;
 }
 
+.game-card {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    padding-bottom: 5px;
+    border-bottom: 1px solid var(--main-green);
+    position: relative;
+}
+
 .game-image-container img{
     width: 100%;
     height: 100%;
     border-radius: 5px;
 }
+
+.on-sale-title-container1 {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    /* background: rgb(211, 19, 218); */
+    top: 0; /* Start from the top of the parent */
+    left: 0; /* Align to the left of the parent */
+    right: 0; /* Align to the right of the parent */
+    bottom: 0;
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+}
+
+.sale-img {
+    max-width: 30%;
+    padding-left: 1vw;
+    padding-top: 1vw;
+    filter: drop-shadow(0px 1px 20px #c5ff61);
+    transition: transform 0.3s ease-in-out;
+}
+
+/* .on-sale-title-container2 {
+    border-radius: 100%;
+    border: 2px solid rgba(255, 255, 255, 0.751);
+    background: rgba(0, 128, 0, 0.948);
+    padding: 10px 0;
+    margin-top: 1vw;
+    margin-left: 1vw;
+} */
+
+
+
+/* .on-sale-title {
+    font-size: 55px;
+    white-space: nowrap;
+    font-weight: 600;
+    color: rgb(255, 255, 255);
+    padding: 45px;
+    border-radius: 100%;
+} */
 
 .price-container {
     display: flex;
