--- a/css/header.css
+++ b/css/header.css
@@ -31,15 +31,15 @@ nav img {
         display: flex;
     }
     
-    <!--nav {
+    /* nav {
         width: 100%;
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
         gap: 25px;
-    }
-    -->
+    } */
+    
     nav img {
         max-height: 120px;
     }
